# libmpdpp

./: .gitignore  Gemfile  README.md  _config.yml  api.md  index.html  index.markdown  meson.build
_layouts/: encapsulate-doxygen.html
_posts/: 2025-06-19-welcome-to-jekyll.markdown
api/: current.md  v0.0.1.md
api/v0.0.1/: AdaptationSet_8hh.html  AdaptationSet_8hh.js  AdaptationSet_8hh__dep__incl.map  AdaptationSet_8hh__dep__incl.md5  AdaptationSet_8hh__incl.map  AdaptationSet_8hh__incl.md5  AdaptationSet_8hh_source.html  BaseURL_8hh.html  BaseURL_8hh.js  BaseURL_8hh__dep__incl.map  BaseURL_8hh__dep__incl.md5  BaseURL_8hh__incl.map  BaseURL_8hh__incl.md5  BaseURL_8hh_source.html  Codecs_8hh.html  Codecs_8hh.js  Codecs_8hh__dep__incl.map  Codecs_8hh__dep__incl.md5  Codecs_8hh__incl.map  Codecs_8hh__incl.md5  Codecs_8hh_source.html  ContentComponent_8hh.html  ContentComponent_8hh.js  ContentComponent_8hh__dep__incl.map  ContentComponent_8hh__dep__incl.md5  ContentComponent_8hh__incl.map  ContentComponent_8hh__incl.md5  ContentComponent_8hh_source.html  ContentPopularityRate_8hh.html  ContentPopularityRate_8hh.js  ContentPopularityRate_8hh__dep__incl.map  ContentPopularityRate_8hh__dep__incl.md5  ContentPopularityRate_8hh__incl.map  ContentPopularityRate_8hh__incl.md5  ContentPopularityRate_8hh_source.html  ContentProtection_8hh.html  ContentProtection_8hh.js  ContentProtection_8hh__dep__incl.map  ContentProtection_8hh__dep__incl.md5  ContentProtection_8hh__incl.map  (+797 more)
api/v0.0.1/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  concepts_0.js  defines_0.js  (+65 more)
doc/: Doxyfile.in  meson.build
examples/: dump_mpd.cc  load_mpd.cc  meson.build  next_segments.cc
include/: meson.build
include/libmpd++/: Accessibility.hh  AdaptationSet.hh  BaseURL.hh  Codecs.hh  ContentComponent.hh  ContentPopularityRate.hh  ContentProtection.hh  Descriptor.hh  EventStream.hh  ExtendedBandwidth.hh  FailoverContent.hh  FrameRate.hh  InitializationSet.hh  Label.hh  LeapSecondInformation.hh  MPD.hh  Metrics.hh  MultipleSegmentBase.hh  PatchLocation.hh  Period.hh  Preselection.hh  ProducerReferenceTime.hh  ProgramInformation.hh  RFC6838ContentType.hh  RandomAccess.hh  Rating.hh  Ratio.hh  RatioType.hh  Representation.hh  RepresentationBase.hh  Resync.hh  Role.hh  SAP.hh  Sap.hh  SegmentAvailability.hh  SegmentBase.hh  SegmentList.hh  SegmentTemplate.hh  SegmentTimeline.hh  SegmentType.hh  (+15 more)
src/: Accessibility.cc  AdaptationSet.cc  BaseURL.cc  Codecs.cc  ContentComponent.cc  ContentPopularityRate.cc  ContentProtection.cc  DecomposedURL.cc  DecomposedURL.hh  Descriptor.cc  EventStream.cc  ExtendedBandwidth.cc  FailoverContent.cc  FrameRate.cc  InitializationSet.cc  Label.cc  LeapSecondInformation.cc  MPD.cc  Metrics.cc  MultipleSegmentBase.cc  PatchLocation.cc  Period.cc  Preselection.cc  ProducerReferenceTime.cc  ProgramInformation.cc  RFC6838ContentType.cc  RandomAccess.cc  Rating.cc  Ratio.cc  RatioType.cc  Representation.cc  RepresentationBase.cc  Resync.cc  Role.cc  SAP.cc  Sap.cc  SegmentAvailability.cc  SegmentBase.cc  SegmentList.cc  SegmentTemplate.cc  (+17 more)
tests/: meson.build  segment_selection.cc  segment_templates.cc  test_live.mpd
