##############################################################################
# DASH MPD parsing library in C++: main meson build file
##############################################################################
# Copyright: (C) 2025 British Broadcasting Corporation
# Author(s): David Waring <david.waring2@bbc.co.uk>
# License: LGPL?
#
# For full license terms please see the LICENSE file distributed with this
# library or refer to: [URL here].
#

project('bbc-parse-dash-mpd-cpp', 'cpp',
        version : '0.0.1',
        license : 'LGPL',
        meson_version : '>= 1.4.0',
        default_options : [
            'cpp_std=gnu++20',
        ],
)

subdir('include')
subdir('src')
subdir('tests')
subdir('examples')
