##############################################################################
# DASH MPD parsing library in C++: main meson build file
##############################################################################
# Copyright: (C) 2025 British Broadcasting Corporation
# Author(s): David Waring <david.waring2@bbc.co.uk>
# License: LGPLv3
#
# For full license terms please see the LICENSE file distributed with this
# library or refer to: https://www.gnu.org/licenses/lgpl-3.0.txt.
#

project('libmpdpp', 'cpp',
        version : '0.0.2',
        license : 'LGPL-3.0-only',
        meson_version : '>= 1.4.0',
        default_options : [
            'cpp_std=gnu++20',
        ],
)

subdir('include')
subdir('src')
subdir('tests')
subdir('examples')
subdir('doc')
