##############################################################################
# DASH MPD parsing library in C++: include directory meson build file
##############################################################################
# Copyright: (C) 2025 British Broadcasting Corporation
# Author(s): David Waring <david.waring2@bbc.co.uk>
# License: LGPL?
#
# For full license terms please see the LICENSE file distributed with this
# library or refer to: [URL here].
#

libparsempd_inc_dir = include_directories('.')
subdir('libmpd++')
