##############################################################################
# DASH MPD parsing library in C++: include directory meson build file
##############################################################################
# Copyright: (C) 2025 British Broadcasting Corporation
# Author(s): David Waring <david.waring2@bbc.co.uk>
# License: LGPLv3
#
# For full license terms please see the LICENSE file distributed with this
# library or refer to: https://www.gnu.org/licenses/lgpl-3.0.txt.
#

libparsempd_inc_dir = include_directories('.')
subdir('libmpd++')
